--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.4.0",
     "@scoutsdk/server-sdk": "^0.7.0",
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
